security-groups/maint.tf
provider "aws" {
  region = "eu-central-1"
}

resource "aws_instance" "ec" {
    ami = "ami-07ce6ac5ac8a0ee6f"
    instance_type = "t2.micro"
    security_groups = [ aws_security_group.webtraffic.name ]
}

resource "aws_security_group" "webtraffic" {
  name ="Allow HTTPS"
  
  ingress {
    from_port = 443
    to_port = 443
    protocol = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 443
    to_port = 443
    protocol = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
